# voiceai

./: .gitignore  CLAUDE.md  COMPUTE.md  HOW_TO_TRAIN.md  OSS_LANDSCAPE.md  PLAN.md  PROJECT_STATE.md  README.md  RUNBOOK.md  SESSION_HANDOFF.md  TRAINING_IDEAS.md  TRAINING_RUN_LOG.md  pyproject.toml  session.txt
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-06-11T01-34-28-253Z.yml  page-2026-06-11T01-35-56-682Z.yml
notebooks/: colab_asr_mini.ipynb  colab_overfit_demo.ipynb  colab_realtest.ipynb  colab_smoke.ipynb  colab_train.ipynb
scripts/: bench_streaming.py  bootstrap.py  colab_asr_mini.py  colab_asr_whisper.py  colab_overfit_demo.py  colab_realtest.py  demo_fullduplex.py  download_data.py  download_hf_datasets.py  encode_all_mimi.py  extract_librispeech.py  fast_download.py  gen_backchannel.py  gen_barge_in.py  gen_concurrent_commentary.py  gen_constraints.py  gen_diverse_dialogs.py  gen_general_dialog.py  gen_minimax_dialogs.py  gen_rapid_qa.py  gen_sound_recognition.py  gen_synth_data.py  gen_time_aware.py  gen_time_aware_audio.py  gen_time_limited.py  gen_volume_dynamics.py  launch_stage1.py  launch_stage2.py  preencode_stage1.py  prep_data_cpu.py  smoke_test.py  train_recipe.py  transcribe.py  webui.py
src/voiceai/background/: __init__.py  openai_compat.py
src/voiceai/eval/: __init__.py  asr_quality.py  concurrent_commentary.py  emotion_recognition.py  metrics.py  runner.py  timespeak.py  whisper_asr_quality.py
tests/: conftest.py  test_aec.py  test_audio_adapter.py  test_dual_stream_data.py  test_streaming.py  test_voiceai_lm.py
(+39 files in other folders)
