[project]
name = "voiceai"
version = "0.1.0"
description = "Open-source competitor to Thinking Machines Interaction Model — native end-to-end speech LLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5",
    "torchaudio>=2.5",
    "transformers>=4.55",
    "accelerate>=1.0",
    "peft>=0.13",
    "datasets>=3.0",
    "soundfile>=0.12",
    "librosa>=0.11",
    "numpy>=2.0",
    "sounddevice>=0.5",
    "webrtcvad>=2.0.10",
    "httpx>=0.28",
    "websockets>=14",
    "pydantic>=2.9",
    "tomli-w>=1.0",
    "rich>=13.9",
    "einops>=0.8",
    "huggingface-hub>=0.26",
    "safetensors>=0.4",
    "tqdm>=4.66",
]

[project.optional-dependencies]
infer = ["vllm>=0.6", "fastapi>=0.115", "uvicorn[standard]>=0.32"]
train = [
    "wandb>=0.18",
    "bitsandbytes>=0.44",
    "trl>=0.12",
    "moshi>=0.2.0",
    "anthropic>=0.40",
    "openai>=1.50",
]
datagen = [
    "kokoro>=0.7",
    "misaki[en]>=0.7",
]
eval = ["evaluate>=0.4", "jiwer>=3.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.7", "mypy>=1.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voiceai"]
